--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Calculator</string>
+    <string name="divide_by_zero">Can\'t Divide by Zero</string>
+    <string name="error">ERROR</string>
+    <string name="div">÷</string>
+    <string name="multi">×</string>
 </resources>
